style: big reformat with intellij of everything