@@ -1,6 +1,5 @@
 package it.polimi.tiw.projects.dao;
 
-import static org.junit.jupiter.api.Assertions.*;
 import it.polimi.tiw.projects.beans.Album;
 import it.polimi.tiw.projects.beans.Playlist;
 import it.polimi.tiw.projects.beans.Song;
@@ -8,44 +7,31 @@ import it.polimi.tiw.projects.beans.User;
 import it.polimi.tiw.projects.exceptions.DAOException;
 import it.polimi.tiw.projects.exceptions.DAOException.DAOErrorType;
 import it.polimi.tiw.projects.utils.Genre;
+import org.junit.jupiter.api.*;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import java.sql.Connection;
-import java.sql.DriverManager;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import java.sql.SQLException;
+import java.sql.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 
-import org.junit.jupiter.api.*;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import static org.junit.jupiter.api.Assertions.*;
 
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 class PlaylistDAOTest {
 
     private static final Logger logger = LoggerFactory.getLogger(PlaylistDAOTest.class);
-
-    private static Connection connection;
-    private static PlaylistDAO playlistDAO;
-    private static UserDAO userDAO;
-    private static SongDAO songDAO;
-    private static AlbumDAO albumDAO;
-
     // Database connection details
     private static final String DB_URL = "jdbc:mysql://localhost:3306/TIW2025";
     private static final String DB_USER = "tiw";
     private static final String DB_PASS = "TIW2025";
-
     // Test data
     private static final String TEST_USERNAME = "playlist_test_user_junit";
     private static final String TEST_PASSWORD = "password_playlist";
     private static final String TEST_NAME = "PlaylistJUnit";
     private static final String TEST_SURNAME = "Tester";
-    private static UUID testUserId;
-
     private static final String TEST_PLAYLIST_NAME = "JUnit Test Playlist";
     private static final String TEST_PLAYLIST_NAME_DUPLICATE = "JUnit Test Playlist Duplicate";
     private static final String TEST_SONG_TITLE = "JUnit Test Song";
@@ -55,12 +41,17 @@ class PlaylistDAOTest {
     private static final String TEST_ALBUM_NAME = "JUnit Test Album";
     private static final String TEST_ALBUM_ARTIST = "JUnit Artist";
     private static final int TEST_ALBUM_YEAR = 2024;
-
     // Second user for ownership tests
     private static final String TEST_USERNAME_2 = "playlist_test_user_junit_2_" + System.currentTimeMillis();
     private static final String TEST_PASSWORD_2 = "password_playlist_2";
     private static final String TEST_NAME_2 = "PlaylistJUnit2";
     private static final String TEST_SURNAME_2 = "Tester2";
+    private static Connection connection;
+    private static PlaylistDAO playlistDAO;
+    private static UserDAO userDAO;
+    private static SongDAO songDAO;
+    private static AlbumDAO albumDAO;
+    private static UUID testUserId;
     private static UUID testUserId2;
     private Integer createdSongIdUser2; // Song created by user 2
 
@@ -261,7 +252,7 @@ class PlaylistDAOTest {
                 assertTrue(rs.next(), "Playlist metadata should exist after commit");
                 assertNotNull(rs.getTimestamp("birthday"), "Birthday should not be null after commit");
                 createdPlaylistId = rs.getInt("idPlaylist"); // Store the ID for later
-                                                             // use/verification
+                // use/verification
                 assertFalse(rs.next(), "Should only be one playlist with this name for this user");
             }
         }
@@ -326,12 +317,12 @@ class PlaylistDAOTest {
         assertNotNull(playlists, "Playlist list should not be null");
         assertEquals(1, playlists.size(), "Should find exactly one playlist for the user");
 
-        Playlist firstPlaylist = playlists.get(0);
+        Playlist firstPlaylist = playlists.getFirst();
         assertNotNull(firstPlaylist, "First playlist object should not be null");
         assertEquals(TEST_PLAYLIST_NAME, firstPlaylist.getName(), "Playlist name should match the created one");
         assertNotNull(firstPlaylist.getSongs(), "Playlist songs should not be null");
         assertFalse(firstPlaylist.getSongs().isEmpty(), "Playlist songs should not be empty");
-        assertEquals(createdSongId, firstPlaylist.getSongs().get(0), "Song ID in playlist should match");
+        assertEquals(createdSongId, firstPlaylist.getSongs().getFirst(), "Song ID in playlist should match");
 
         // Optional: Direct DB check to be absolutely sure
         try (PreparedStatement pStatement = connection.prepareStatement(
@@ -376,7 +367,7 @@ class PlaylistDAOTest {
 
         assertNotNull(foundPlaylist.getSongs(), "Playlist songs list should not be null");
         assertEquals(1, foundPlaylist.getSongs().size(), "Playlist should contain one song");
-        assertEquals(createdSongId, foundPlaylist.getSongs().get(0), "Song ID in playlist should match");
+        assertEquals(createdSongId, foundPlaylist.getSongs().getFirst(), "Song ID in playlist should match");
 
         // Test NOT_FOUND
         final int nonExistentPlaylistId = 99999;
@@ -397,7 +388,7 @@ class PlaylistDAOTest {
     @Order(5)
     void testCreatePlaylist_InvalidSong() throws SQLException {
         List<Integer> invalidSongIds = List.of(-1); // Assuming -1 is an invalid/non-existent song
-                                                    // ID
+        // ID
 
         // Expect NOT_FOUND because the song ID check in createPlaylist should fail
         DAOException exception = assertThrows(DAOException.class,
@@ -466,7 +457,7 @@ class PlaylistDAOTest {
         playlistToDelete = playlistDAO.createPlaylist("Playlist To Delete Again", testUserId, songIds);
         connection.commit();
         final int finalPlaylistIdToDelete = playlistToDelete.getIdPlaylist(); // Use final variable
-                                                                              // for lambda
+        // for lambda
         UUID otherUserId = UUID.randomUUID();
         DAOException accessDeniedException = assertThrows(DAOException.class,
                 () -> playlistDAO.deletePlaylist(finalPlaylistIdToDelete, otherUserId),
@@ -601,8 +592,8 @@ class PlaylistDAOTest {
         // 6. Test removing a song not in the playlist - Returns boolean
         boolean removedNonPresent = assertDoesNotThrow(
                 () -> playlistDAO.removeSongFromPlaylist(playlistId, testUserId, secondSongId), // Try
-                                                                                                // removing
-                                                                                                // again
+                // removing
+                // again
                 "Removing non-present song should not throw.");
         connection.commit(); // Commit even if no change expected
         assertFalse(removedNonPresent, "Removing a song not present should return false");
